# stonks

./: .env.example  .gitignore  README.md
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_setup_enrichment_fields.py  003_analytics_learning_layer.py  004_v1_decision_snapshots.py  005_spy_scalper_tables.py  005_tastytrade_credentials.py
backend/app/: main.py
backend/app/api/: analytics.py  auth_tastytrade.py  balances.py  bot_control.py  candidates.py  debug_market.py  decisions.py  event_analyses.py  health.py  positions.py  rejections.py  status.py  trades.py  (+1 more)
backend/scripts/: seed_demo.py  tastytrade_smoke.py
backend/stonks_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_ai_provider_runtime.py  test_analytics_api.py  test_analytics_engine.py  test_auth_tastytrade_bootstrap.py  test_bot_transitions.py  test_candidate_generator.py  test_cross_market_confirmation.py  test_event_analysis_schema.py  test_event_analysis_service.py  test_exit_classifier.py  test_fill_engine.py  test_fusion.py  test_hard_veto.py  test_health.py  test_live_execution_isolation.py  test_macro_lockout_timezone.py  test_market_snapshot_service_live.py  test_multi_strategy_api.py  test_paper_broker_option_fill.py  test_quote_cache.py  test_recommendation_engine.py  test_setup_qualifier.py  test_setup_scoring.py  test_shadow_experiments.py  test_spy_scalper_core.py  test_status.py  test_thenewsapi_provider.py  test_token_manager.py  test_trade_management.py  test_v1_classifier.py
(+175 files in other folders)
